# Dumb-Thieves

./: .gitignore  README.md  Vagrantfile.txt  test-vagrant.c
dumb-thieves/: CMakeLists.txt  communication.c  hosts  logic.c  main  main.c  process.c  queue.c  sort_logs.sh  utils.c
dumb-thieves/include/: communication.h  house.h  logic.h  process.h  queue.h  request.h  utils.h
